welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:3: error: not found: value negatif
  return ((a<0 && b>0 || b<0 && a>0) && !negative) || (negatif && a>0 && b>0)
                                                       ^